fixing table alignment

--- a/src/style.scss
+++ b/src/style.scss
@@ -157,6 +157,7 @@ meetings {
 
       //was seeing interference from themes
       border-width: 0;
+      vertical-align: middle;
 
       .distance {
         text-align: right;
